[gd_scene load_steps=20 format=3 uid="uid://cff5li31pk0jx"]

[ext_resource type="Script" path="res://Components/Popups/store_item_modal.gd" id="1_ychtr"]
[ext_resource type="Texture2D" uid="uid://bnj6rvdpuh0fc" path="res://UITextures/BGTextures/main_city.png" id="2_wygyw"]
[ext_resource type="Texture2D" uid="uid://71ok60rxtq74" path="res://UITextures/Popups/info_panel.png" id="3_7ymp4"]
[ext_resource type="Texture2D" uid="uid://3rxqq1un1t5e" path="res://UITextures/Buttons/close.png" id="3_tsqrq"]
[ext_resource type="Texture2D" uid="uid://dw8vtn3ftjpfy" path="res://UITextures/Buttons/close_hover.png" id="4_40xnu"]
[ext_resource type="FontFile" uid="uid://pv0ja7y8uilm" path="res://UITextures/Fonts/HankenGrotesk-Bold.ttf" id="5_5o5t1"]
[ext_resource type="Texture2D" uid="uid://dtknbgik85jx3" path="res://UITextures/Progress/prop_base.png" id="5_f8ghx"]
[ext_resource type="Texture2D" uid="uid://ds0um88d71gmp" path="res://UITextures/Progress/prop_progress.png" id="6_sh0mv"]
[ext_resource type="FontFile" uid="uid://vqx73un0cel7" path="res://UITextures/Fonts/HankenGrotesk-Italic-VariableFont_wght.ttf" id="7_vtv0g"]
[ext_resource type="Texture2D" uid="uid://1ktjogd6a24l" path="res://UITextures/Buttons/buy_button.png" id="8_0vpge"]
[ext_resource type="FontFile" uid="uid://chprskojxilgj" path="res://UITextures/Fonts/argentum-sans.black.ttf" id="8_p2noh"]
[ext_resource type="PackedScene" uid="uid://c3q3fqqfdkrw" path="res://Components/LoadingComponents/filter_panel.tscn" id="13_sdllf"]
[ext_resource type="Texture2D" uid="uid://cu2rldjgd6cuu" path="res://UITextures/Cards/hannah_no_doubt_genesis.png" id="15_psqku"]

[sub_resource type="ViewportTexture" id="ViewportTexture_fvuja"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5k46n"]
transparency = 1
vertex_color_is_srgb = true
albedo_texture = ExtResource("15_psqku")
metallic = 1.0
metallic_specular = 0.0

[sub_resource type="QuadMesh" id="QuadMesh_vfpk8"]
material = SubResource("StandardMaterial3D_5k46n")
uv2_padding = 1.0
size = Vector2(119.5, 150)

[sub_resource type="Animation" id="Animation_6t2hi"]
resource_name = "buy_loading"
length = 3.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_5mc1f"]
resource_name = "halfspin"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SubViewport/Area3D/CardMesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.0872665, 0), Vector3(0, 0.0872665, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rnhn3"]
_data = {
"buy_loading": SubResource("Animation_6t2hi"),
"halfspin": SubResource("Animation_5mc1f")
}

[node name="store_item_modal" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ychtr")

[node name="BackgroundTexture" type="TextureRect" parent="."]
self_modulate = Color(0.360784, 0.360784, 0.360784, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wygyw")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardSprite" type="Sprite2D" parent="BackgroundTexture/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
position = Vector2(404, 267)
texture = SubResource("ViewportTexture_fvuja")

[node name="VBoxContainer2" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.79

[node name="TextureRect" type="TextureRect" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
self_modulate = Color(0.776471, 0.776471, 0.776471, 1)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_7ymp4")
expand_mode = 1
flip_h = true

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0520446
anchor_top = 0.226667
anchor_right = 0.918216
anchor_bottom = 0.925333
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SPContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/SPContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/SPContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "SP"
vertical_alignment = 2

[node name="SP" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/SPContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealBoostProgress" type="TextureProgressBar" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/SPContainer"]
custom_minimum_size = Vector2(172, 5)
layout_mode = 2
size_flags_horizontal = 0
nine_patch_stretch = true
texture_under = ExtResource("5_f8ghx")
texture_progress = ExtResource("6_sh0mv")

[node name="ScoreBoostContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/ScoreBoostContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/ScoreBoostContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "SCOREBOOST"
vertical_alignment = 2

[node name="ScoreBoost" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/ScoreBoostContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ScoreBoostProgress" type="TextureProgressBar" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/ScoreBoostContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(172, 5)
layout_mode = 2
size_flags_horizontal = 0
nine_patch_stretch = true
texture_under = ExtResource("5_f8ghx")
texture_progress = ExtResource("6_sh0mv")

[node name="HealBoostContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/HealBoostContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/HealBoostContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "HEALBOOST"
vertical_alignment = 2

[node name="HealBoost" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/HealBoostContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealBoostProgress" type="TextureProgressBar" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/HealBoostContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(172, 5)
layout_mode = 2
size_flags_horizontal = 0
nine_patch_stretch = true
texture_under = ExtResource("5_f8ghx")
texture_progress = ExtResource("6_sh0mv")

[node name="RarityContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/RarityContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/RarityContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "RARITY"
vertical_alignment = 2

[node name="Rarity" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/RarityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_vtv0g")
theme_override_font_sizes/font_size = 14
text = "LIMITED EDITION"

[node name="SkillContainer" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/SkillContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/SkillContainer/HBoxContainer"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_5o5t1")
text = "SKILL"
vertical_alignment = 2

[node name="Skill" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer/VBoxContainer/SkillContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_vtv0g")
theme_override_font_sizes/font_size = 14
text = "DOUBLE UP"

[node name="HBoxContainer2" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardName" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0520446
anchor_top = 0.0652741
anchor_right = 0.920074
anchor_bottom = 0.180157
offset_bottom = -8.0
theme_override_fonts/font = ExtResource("8_p2noh")
theme_override_font_sizes/font_size = 28
text = "MUST BE LOVE"
horizontal_alignment = 1
vertical_alignment = 2
clip_text = true
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="TextureButton2" type="TextureButton" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
self_modulate = Color(0.776471, 0.776471, 0.776471, 1)
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("8_0vpge")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/TextureButton2"]
custom_minimum_size = Vector2(104, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -9.0
offset_right = 52.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("8_p2noh")
theme_override_font_sizes/font_size = 12
text = "SEND AS A GIFT"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BuyButton" type="TextureButton" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.776471, 0.776471, 0.776471, 1)
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("8_0vpge")
ignore_texture_size = true
stretch_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/BuyButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.0285714
anchor_right = 0.884
anchor_bottom = 0.942857
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/BuyButton/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("8_p2noh")
theme_override_font_sizes/font_size = 12
text = "BUY NOW"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Price" type="Label" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/BuyButton/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("8_p2noh")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 2
vertical_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="BackgroundTexture"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 14.0
offset_top = 16.0
offset_right = 74.0
offset_bottom = 76.0

[node name="CloseButton" type="TextureButton" parent="BackgroundTexture/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_tsqrq")
texture_hover = ExtResource("4_40xnu")

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
transparent_bg = true

[node name="Area3D" type="Node3D" parent="SubViewport"]

[node name="CardMesh" type="MeshInstance3D" parent="SubViewport/Area3D"]
unique_name_in_owner = true
transform = Transform3D(0.996195, 0, -0.0871558, 0, 1, 0, 0.0871558, 0, 0.996195, 0, 0, 0)
mesh = SubResource("QuadMesh_vfpk8")

[node name="Camera3D" type="Camera3D" parent="SubViewport/Area3D"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -1.85923, 4.50207, 144.818)

[node name="OmniLight3D2" type="OmniLight3D" parent="SubViewport/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 74.1237, 119.064)
light_energy = 16.0
light_specular = 3.909
omni_range = 449.986

[node name="OmniLight3D4" type="OmniLight3D" parent="SubViewport/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 74.1237, 119.064)
light_energy = 16.0
light_specular = 3.909
omni_range = 449.986

[node name="OmniLight3D5" type="OmniLight3D" parent="SubViewport/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 74.1237, 119.064)
light_energy = 16.0
light_specular = 3.909
omni_range = 449.986

[node name="OmniLight3D6" type="OmniLight3D" parent="SubViewport/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -59.8231, -53.6142, 119.022)
light_energy = 16.0
light_specular = 3.909
omni_range = 449.986
omni_attenuation = 0.933033

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_rnhn3")
}
autoplay = "halfspin"

[node name="FilterPanel" parent="." instance=ExtResource("13_sdllf")]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1200.0
offset_bottom = 540.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="BackgroundTexture/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="BackgroundTexture/HBoxContainer2/CloseButton" to="." method="_on_close_button_pressed"]
